Corrigidas e finalizadas as atividades 1-3.